# test-genetic

./: .gitignore  fuzzy_sets.csv
GAS/: CMakeLists.txt  SGA.cpp  compile_run.sh  gas  gas1.cpp  resultados.txt  salida  test.sh
GAS/experiment/: main.cpp  main1.cpp
GAS/experimental/: CMakeLists.txt  data.csv
GAS/experimental/lib/ga/: sga.hpp
GAS/experimental/src/experiments/: program.cpp
GAS/experimental/src/ga/: sga.cpp
GAS/lib/: gas.cpp  gas.hpp
GAS/lib/algorithms/: elitist.hpp
GAS/lib/copia/: gas.hpp
GAS/practica1/: main.py  run.sh
GAS/practica1/app/: main.cpp
GAS/practica1/lib/experiments/: program.hpp
GAS/practica1/lib/ga/: sga.hpp
GAS/practica1/src/ga/: sga.cpp
GAS/practica_2/: main.py  run.sh
GAS/practica_2/app/: main.cpp
GAS/practica_2/lib/ga/: sga.hpp
GAS/practica_2/lib/io/: reader.h
GAS/practica_2/src/ga/: sga.cpp
GAS/practica_3/: data.csv  main.py
GAS/practica_3/app/: main.cpp
GAS/practica_3/lib/ga/: sga.hpp
GAS/practica_3/src/ga/: sga.cpp
GAS/practica_3/src/io/: reader.cpp
GAS/practica_4/: CMakeLists.txt  data_1.csv  data_2.csv  data_3.csv  main.py  run.sh
GAS/practica_4/app/: main.cpp
GAS/practica_4/lib/experiments/: program.hpp
GAS/practica_4/lib/ga/: sga.hpp
GAS/results/: f1.txt  f1_est.txt  f2.txt  f3.txt
GAS/src/algorihms/: elitist.cpp  gas.cpp
GAS/src/algorithms/: elitist.cpp
GAS/src/benchmark/: benchmark.cpp
GAS/tarea1/: CMakeLists.txt
GAS/tarea1/experiment/: main1.cpp
GAS/tarea1/plots/: plot.py
GAS/tarea1/results/: f2_est.txt  f3.txt  f3_est.txt
GAS/trash/: gas1.cpp
GAS/trash/copia/: gas1.cpp
(+104 files in other folders)
